Fix issues in rest declaration
